<resources>
    <string name="app_name">Greet Gallery</string>
    <string name="action_settings">Settings</string>
    <string name="set">Set</string>
    <string name="browse">Choose File</string>
    <string name="editSingle">Type a message</string>
    <string name="hint">Enter your message...</string>
    <string name="birthday">Birthday Cards</string>
    <string name="anniversary">Anniversary Cards</string>
    <string name="social">Other</string>
    <string name="festival">Festival</string>
    <string name="everyday">Everyday Cards</string>
</resources>
